[gd_scene load_steps=10 format=3 uid="uid://cocpoblxt6lyt"]

[ext_resource type="Script" uid="uid://b7aum2u6qkvc1" path="res://script/player.gd" id="1_qlg0r"]
[ext_resource type="Texture2D" uid="uid://drqgff3cag3e6" path="res://art/Pelos/playerGrey_up1.png" id="2_tuyoq"]
[ext_resource type="Texture2D" uid="uid://5idy3djagln" path="res://art/Pelos/playerGrey_up2.png" id="3_fjrip"]
[ext_resource type="Texture2D" uid="uid://b0wltjfe2ud1o" path="res://art/Pelos/playerGrey_walk1.png" id="4_smehm"]
[ext_resource type="Texture2D" uid="uid://dh2l7rvgqow6r" path="res://art/Pelos/playerGrey_walk2.png" id="5_ur7pv"]
[ext_resource type="AudioStream" uid="uid://cdmjbfnogywqb" path="res://Sound/combat-punch-hit-a.mp3" id="6_tuyoq"]
[ext_resource type="AudioStream" uid="uid://dbl6mbgemlhni" path="res://Sound/sfx-magic12.mp3" id="7_fjrip"]

[sub_resource type="SpriteFrames" id="SpriteFrames_d2wvv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tuyoq")
}, {
"duration": 1.0,
"texture": ExtResource("3_fjrip")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_smehm")
}, {
"duration": 1.0,
"texture": ExtResource("5_ur7pv")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y4r1p"]
radius = 27.0
height = 68.0

[node name="Player" type="Area2D" groups=["player"]]
position = Vector2(104, 70)
script = ExtResource("1_qlg0r")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_d2wvv")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_y4r1p")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tuyoq")

[node name="HealthSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_fjrip")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
